// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer bottom - matches snapshot 1`] = `
.c0 {
  position: fixed;
  z-index: var(--px-drawer-z-index,100);
  color: var(--px-drawer-font-color,black);
  background-color: var(--px-drawer-background-color,white);
  width: var(--px-drawer-width,256px);
  height: var(--px-drawer-height,100%);
  box-shadow: var(--px-drawer-box-shadow,rgba(0,0,0,0.16) 0 1px 4px,rgba(0,0,0,0.23) 0 1px 4px);
  -webkit-transition: var(--px-drawer-transition,-webkit-transform 350ms cubic-bezier(0.23,1,0.32,1));
  -webkit-transition: var(--px-drawer-transition,transform 350ms cubic-bezier(0.23,1,0.32,1));
  transition: var(--px-drawer-transition,transform 350ms cubic-bezier(0.23,1,0.32,1));
  top: auto;
  left: 0;
  bottom: 0;
  right: 0;
  height: auto;
  max-height: 100vh;
  width: 100%;
  -webkit-transform: translateY(105%);
  -ms-transform: translateY(105%);
  transform: translateY(105%);
  width: 100%;
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  z-index: var(--px-drawer-z-index,25);
  visibility: visible;
}

.c0::after {
  position: fixed;
  top: 56px;
  bottom: 0;
  left: 100%;
  visibility: visible;
  width: 20px;
  content: "";
}

.c1 {
  overflow-x: hidden;
  overflow-y: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-overflow-scrolling: touch;
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

<div>
  <div
    className="c0 px-drawer"
    type={null}
  >
    <div
      className="c1 px-drawer-content"
    />
  </div>
</div>
`;

exports[`Drawer docked - matches snapshot 1`] = `
.c0 {
  position: fixed;
  z-index: var(--px-drawer-z-index,100);
  color: var(--px-drawer-font-color,black);
  background-color: var(--px-drawer-background-color,white);
  width: var(--px-drawer-width,256px);
  height: var(--px-drawer-height,100%);
  box-shadow: var(--px-drawer-box-shadow,rgba(0,0,0,0.16) 0 1px 4px,rgba(0,0,0,0.23) 0 1px 4px);
  -webkit-transition: var(--px-drawer-transition,-webkit-transform 350ms cubic-bezier(0.23,1,0.32,1));
  -webkit-transition: var(--px-drawer-transition,transform 350ms cubic-bezier(0.23,1,0.32,1));
  transition: var(--px-drawer-transition,transform 350ms cubic-bezier(0.23,1,0.32,1));
  top: 0;
  left: 0;
  right: auto;
  -webkit-transform: translateX(-110%);
  -ms-transform: translateX(-110%);
  transform: translateX(-110%);
  z-index: var(--px-drawer-z-index,25);
  visibility: visible;
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c0::after {
  position: fixed;
  top: 56px;
  bottom: 0;
  left: 100%;
  visibility: visible;
  width: 20px;
  content: "";
}

.c1 {
  overflow-x: hidden;
  overflow-y: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-overflow-scrolling: touch;
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

<div>
  <div
    className="c0 px-drawer"
    type={null}
  >
    <div
      className="c1 px-drawer-content"
    />
  </div>
</div>
`;

exports[`Drawer left - matches snapshot 1`] = `
.c0 {
  position: fixed;
  z-index: var(--px-drawer-z-index,100);
  color: var(--px-drawer-font-color,black);
  background-color: var(--px-drawer-background-color,white);
  width: var(--px-drawer-width,256px);
  height: var(--px-drawer-height,100%);
  box-shadow: var(--px-drawer-box-shadow,rgba(0,0,0,0.16) 0 1px 4px,rgba(0,0,0,0.23) 0 1px 4px);
  -webkit-transition: var(--px-drawer-transition,-webkit-transform 350ms cubic-bezier(0.23,1,0.32,1));
  -webkit-transition: var(--px-drawer-transition,transform 350ms cubic-bezier(0.23,1,0.32,1));
  transition: var(--px-drawer-transition,transform 350ms cubic-bezier(0.23,1,0.32,1));
  top: 0;
  left: 0;
  right: auto;
  -webkit-transform: translateX(-110%);
  -ms-transform: translateX(-110%);
  transform: translateX(-110%);
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  z-index: var(--px-drawer-z-index,25);
  visibility: visible;
}

.c0::after {
  position: fixed;
  top: 56px;
  bottom: 0;
  left: 100%;
  visibility: visible;
  width: 20px;
  content: "";
}

.c1 {
  overflow-x: hidden;
  overflow-y: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-overflow-scrolling: touch;
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

<div>
  <div
    className="c0 px-drawer"
    type={null}
  >
    <div
      className="c1 px-drawer-content"
    />
  </div>
</div>
`;

exports[`Drawer matches snapshot 1`] = `
.c0 {
  position: fixed;
  z-index: var(--px-drawer-z-index,100);
  color: var(--px-drawer-font-color,black);
  background-color: var(--px-drawer-background-color,white);
  width: var(--px-drawer-width,256px);
  height: var(--px-drawer-height,100%);
  box-shadow: var(--px-drawer-box-shadow,rgba(0,0,0,0.16) 0 1px 4px,rgba(0,0,0,0.23) 0 1px 4px);
  -webkit-transition: var(--px-drawer-transition,-webkit-transform 350ms cubic-bezier(0.23,1,0.32,1));
  -webkit-transition: var(--px-drawer-transition,transform 350ms cubic-bezier(0.23,1,0.32,1));
  transition: var(--px-drawer-transition,transform 350ms cubic-bezier(0.23,1,0.32,1));
  top: 0;
  left: 0;
  right: auto;
  -webkit-transform: translateX(-110%);
  -ms-transform: translateX(-110%);
  transform: translateX(-110%);
}

.c0::after {
  position: fixed;
  top: 56px;
  bottom: 0;
  left: 100%;
  visibility: visible;
  width: 20px;
  content: "";
}

.c1 {
  overflow-x: hidden;
  overflow-y: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-overflow-scrolling: touch;
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

<div>
  <div
    className="c0 px-drawer"
    type={null}
  >
    <div
      className="c1 px-drawer-content"
    />
  </div>
</div>
`;

exports[`Drawer opened - matches snapshot 1`] = `
.c0 {
  position: fixed;
  z-index: var(--px-drawer-z-index,100);
  color: var(--px-drawer-font-color,black);
  background-color: var(--px-drawer-background-color,white);
  width: var(--px-drawer-width,256px);
  height: var(--px-drawer-height,100%);
  box-shadow: var(--px-drawer-box-shadow,rgba(0,0,0,0.16) 0 1px 4px,rgba(0,0,0,0.23) 0 1px 4px);
  -webkit-transition: var(--px-drawer-transition,-webkit-transform 350ms cubic-bezier(0.23,1,0.32,1));
  -webkit-transition: var(--px-drawer-transition,transform 350ms cubic-bezier(0.23,1,0.32,1));
  transition: var(--px-drawer-transition,transform 350ms cubic-bezier(0.23,1,0.32,1));
  top: 0;
  left: 0;
  right: auto;
  -webkit-transform: translateX(-110%);
  -ms-transform: translateX(-110%);
  transform: translateX(-110%);
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  z-index: var(--px-drawer-z-index,25);
  visibility: visible;
}

.c0::after {
  position: fixed;
  top: 56px;
  bottom: 0;
  left: 100%;
  visibility: visible;
  width: 20px;
  content: "";
}

.c1 {
  overflow-x: hidden;
  overflow-y: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-overflow-scrolling: touch;
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

<div>
  <div
    className="c0 px-drawer"
    type={null}
  >
    <div
      className="c1 px-drawer-content"
    />
  </div>
</div>
`;

exports[`Drawer right - matches snapshot 1`] = `
.c0 {
  position: fixed;
  z-index: var(--px-drawer-z-index,100);
  color: var(--px-drawer-font-color,black);
  background-color: var(--px-drawer-background-color,white);
  width: var(--px-drawer-width,256px);
  height: var(--px-drawer-height,100%);
  box-shadow: var(--px-drawer-box-shadow,rgba(0,0,0,0.16) 0 1px 4px,rgba(0,0,0,0.23) 0 1px 4px);
  -webkit-transition: var(--px-drawer-transition,-webkit-transform 350ms cubic-bezier(0.23,1,0.32,1));
  -webkit-transition: var(--px-drawer-transition,transform 350ms cubic-bezier(0.23,1,0.32,1));
  transition: var(--px-drawer-transition,transform 350ms cubic-bezier(0.23,1,0.32,1));
  top: 0;
  left: auto;
  right: 0;
  -webkit-transform: translateX(110%);
  -ms-transform: translateX(110%);
  transform: translateX(110%);
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  z-index: var(--px-drawer-z-index,25);
  visibility: visible;
}

.c0::after {
  position: fixed;
  top: 56px;
  bottom: 0;
  left: 100%;
  visibility: visible;
  width: 20px;
  content: "";
}

.c1 {
  overflow-x: hidden;
  overflow-y: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-overflow-scrolling: touch;
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

<div>
  <div
    className="c0 px-drawer"
    type={null}
  >
    <div
      className="c1 px-drawer-content"
    />
  </div>
</div>
`;

exports[`Drawer top - matches snapshot 1`] = `
.c0 {
  position: fixed;
  z-index: var(--px-drawer-z-index,100);
  color: var(--px-drawer-font-color,black);
  background-color: var(--px-drawer-background-color,white);
  width: var(--px-drawer-width,256px);
  height: var(--px-drawer-height,100%);
  box-shadow: var(--px-drawer-box-shadow,rgba(0,0,0,0.16) 0 1px 4px,rgba(0,0,0,0.23) 0 1px 4px);
  -webkit-transition: var(--px-drawer-transition,-webkit-transform 350ms cubic-bezier(0.23,1,0.32,1));
  -webkit-transition: var(--px-drawer-transition,transform 350ms cubic-bezier(0.23,1,0.32,1));
  transition: var(--px-drawer-transition,transform 350ms cubic-bezier(0.23,1,0.32,1));
  top: 0;
  left: 0;
  bottom: auto;
  right: 0;
  height: auto;
  max-height: 100vh;
  -webkit-transform: translateY(-110%);
  -ms-transform: translateY(-110%);
  transform: translateY(-110%);
  width: 100%;
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  z-index: var(--px-drawer-z-index,25);
  visibility: visible;
}

.c0::after {
  position: fixed;
  top: 56px;
  bottom: 0;
  left: 100%;
  visibility: visible;
  width: 20px;
  content: "";
}

.c1 {
  overflow-x: hidden;
  overflow-y: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-overflow-scrolling: touch;
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

<div>
  <div
    className="c0 px-drawer"
    type={null}
  >
    <div
      className="c1 px-drawer-content"
    />
  </div>
</div>
`;
